# SQLAlchemy_students_database

./: .gitignore  connect_db.py  models.py  my_select.py  pyproject.toml  seed.py
alembic/: env.py
alembic/versions/: 754ceeab66a7_init.py
