[tool.poetry]
name = "hw7"
version = "0.1.0"
description = ""
authors = ["MIT"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
faker = "^24.11.0"
sqlalchemy = "^2.0.29"
psycopg2 = "^2.9.9"
alembic = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
